# No_gada_automation

./: .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml  test.ipynb
app/: extractor.py  main.py
app/static/: index.html
app/static/css/: base.css  components.css
app/static/js/: app.js
app/static/tools/dbio_extractor/: dbio_extractor.css  dbio_extractor.js
app/static/tools/table_extractor/: table_extractor.css  table_extractor.js
app/tools/table_extractor/: router.py  service.py
tests/: test_extractor.py
tests/tools/: test_table_extractor.py
